Project

General

Profile

Actions

Bug #58243

closed

RGW crash in RGWDeleteMultiObj::execute when not executed in an async context

Added by Cory Snyder over 1 year ago. Updated 6 months ago.

Status:
Resolved
Priority:
High
Assignee:
Target version:
-
% Done:

100%

Source:
Tags:
backport_processed
Backport:
pacific,quincy
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The issue was identified in civetweb teuthology tests and the stacktrace is available here: https://github.com/ceph/ceph/pull/49327#issuecomment-1344346532

The bug was introduced in recently merged PR for concurrency with multi-object deletes: https://github.com/ceph/ceph/pull/48679


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #58386: quincy: RGW crash in RGWDeleteMultiObj::execute when not executed in an async contextResolvedCory SnyderActions
Copied to rgw - Backport #58387: pacific: RGW crash in RGWDeleteMultiObj::execute when not executed in an async contextResolvedCory SnyderActions
Actions #1

Updated by Casey Bodley over 1 year ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 49387
Actions #2

Updated by Casey Bodley over 1 year ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Backport Bot over 1 year ago

  • Copied to Backport #58386: quincy: RGW crash in RGWDeleteMultiObj::execute when not executed in an async context added
Actions #4

Updated by Backport Bot over 1 year ago

  • Copied to Backport #58387: pacific: RGW crash in RGWDeleteMultiObj::execute when not executed in an async context added
Actions #5

Updated by Backport Bot over 1 year ago

  • Tags set to backport_processed
Actions #6

Updated by Konstantin Shalygin 6 months ago

  • Status changed from Pending Backport to Resolved
  • % Done changed from 0 to 100
Actions

Also available in: Atom PDF