rgw: fix dereference of empty std::optional in RGWDeleteMultiObj::execute()

Fixes a crash that occurs when RGW is executed without an async context.

Fixes: https://tracker.ceph.com/issues/58243
Signed-off-by: Cory Snyder <csnyder@iland.com>
(cherry picked from commit 91ff9591b095e8e73e4dff5c4a3fe3c66c0de9b6)